# stm_builder

./: .gitlab-ci.yml  Dockerfile  versions.sh
.github/workflows/: docker-build.yml
cmake/: CMakeLists.txt  search.cmake
